[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secator"
version = "0.6.1"
authors = [{ name = "FreeLabz", email = "sales@freelabz.com" }]
readme = "README.md"
description = "The pentester's swiss knife."
requires-python = ">=3.8"
keywords = [
  'cybersecurity',
  'recon',
  'vulnerability',
  'pentest',
  'automation'
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: Free for non-commercial use",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "beautifulsoup4 <= 5",
  'celery < 6',
  "cpe < 2",
  "dotmap < 2",
  "free-proxy < 2",
  "furl < 3",
  "humanize < 5",
  "ifaddr < 1",
  "jinja2 < 4",
  "packaging < 25",
  "python-dotenv < 2",
  "pyyaml < 7",
  "pydantic < 3",
  "requests < 3",
  "rich < 14",
  "rich-click < 1.7",
  "typing_extensions < 5",
  "validators < 1",
  "xmltodict < 1"
]

[project.optional-dependencies]
dev = [
  'coverage < 8',
  'flake8 < 8',
  'watchdog < 3',
  'asciinema-automation < 1',
]
build = [
  'hatch < 2',
]
trace = [
  'memray < 2',
  'pyinstrument < 5',
]
worker = [
  'gevent < 25',
  'eventlet < 1',
  'flower < 3',
]
redis = [
  'redis < 6',
]
mongodb = [
  'pymongo < 5',
]
google = [
  'google-api-python-client < 3',
  'gspread < 7'
]

[project.scripts]
secator = "secator.cli:cli"

[project.urls]
Homepage = "https://github.com/freelabz/secator"
Issues = "https://github.com/freelabz/secator/issues"
