[package]
name = "secator-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
secator-config = { path = "../secator-config" }
secator-debug = { path = "../secator-debug" }
secator-driver = { path = "../secator-driver" }
secator-model = { path = "../secator-model" }
secator-query = { path = "../secator-query" }
secator-report = { path = "../secator-report" }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["rt", "rt-multi-thread", "sync"] }

[dev-dependencies]
tokio = { version = "1.52", features = ["macros", "rt"] }
wiremock = "0.6"
