[package]
name = "secator-exec"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures-util = "0.3"
secator-model = { path = "../secator-model" }
secator-runner = { path = "../secator-runner" }
secator-dag = { path = "../secator-dag" }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "sync", "macros", "fs", "io-util"] }
serde_json = "1.0.150"
secator-expr = { version = "0.1.0", path = "../secator-expr" }
secator-options = { version = "0.1.0", path = "../secator-options" }
secator-parse = { version = "0.1.0", path = "../secator-parse" }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.23.2", features = ["v4"] }
secator-config = { version = "0.1.0", path = "../secator-config" }
