[package]
name = "secator-install"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
secator-runner = { path = "../secator-runner" }
secator-config = { path = "../secator-config" }
secator-debug = { path = "../secator-debug" }
ureq = "2.12"
serde_json = "1.0"
flate2 = "1.0"
tar = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.10"
