[package]
name = "secator-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1.52", features = ["rt", "rt-multi-thread", "net", "io-util", "macros", "sync"] }

[dev-dependencies]
tokio = { version = "1.52", features = ["test-util"] }
