[package]
name = "secator-mongo"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
secator-config = { path = "../secator-config" }
secator-debug = { path = "../secator-debug" }
secator-driver = { path = "../secator-driver" }
secator-model = { path = "../secator-model" }
secator-query = { path = "../secator-query" }
secator-report = { path = "../secator-report" }
mongodb = "3.2"
bson = "2.13"
futures-util = "0.3"
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.52", features = ["rt", "rt-multi-thread", "macros", "sync"] }
