[package]
name = "secator-plugin-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
secator-driver = { path = "../secator-driver" }
secator-exporters = { path = "../secator-exporters" }
secator-model = { path = "../secator-model" }
secator-options = { path = "../secator-options" }
secator-report = { path = "../secator-report" }
secator-runner = { path = "../secator-runner" }
