[package]
name = "secator-providers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
secator-config = { path = "../secator-config" }
secator-debug = { path = "../secator-debug" }
secator-model = { path = "../secator-model" }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.52", features = ["macros", "rt"] }
tempfile = "3.10"
wiremock = "0.6"
