[package]
name = "secator-redis"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
secator-debug = { path = "../secator-debug" }
secator-exec = { path = "../secator-exec" }
secator-model = { path = "../secator-model" }
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "streams", "aio"] }
tokio = { version = "1.52", features = ["sync", "rt", "time", "macros"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4"] }
